# ncmrs

./: Cargo.toml  README.md
src/: cli.rs  decoder.rs  main.rs
